Run installer with sudo

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
           7z x msp430-gcc-full-linux-x64-installer-9.3.1.2.7z
           # Make the installer executable
           chmod +x msp430-gcc-full-linux-x64-installer-9.3.1.2.run
-          ./msp430-gcc-full-linux-x64-installer-9.3.1.2.run --mode unattended --prefix /opt/msp430-gcc
+          sudo ./msp430-gcc-full-linux-x64-installer-9.3.1.2.run --mode unattended --prefix /opt/msp430-gcc
 
       - name: Add MSP430-GCC to PATH
         run: echo "/opt/msp430-gcc/bin" >> $GITHUB_PATH
