Upload output files

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,3 +30,11 @@ jobs:
 
       - name: Build Project
         run: make
+
+      - name: Upload Output Files
+        uses: actions/upload-artifact@v3
+        with:
+          name: Output Files
+          path: |
+            **/*.txt
+            **/*.hex
