--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,19 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # use cache for now instead of custom docker image since it's easier
+      - name: Set Up Cache for MSP430-GCC
+        id: cache-msp430
+        uses: actions/cache@v3
+        with:
+          path: /opt/msp430-gcc
+          key: msp430-gcc
+          restore-keys: |
+            msp430-gcc
+
+
       - name: Install MSP430-GCC
+        if: steps.cache-msp430.outputs.cache-hit != 'true'
         run: |
           sudo apt-get update
           sudo apt-get install -y p7zip-full srecord
