--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,12 +23,14 @@ jobs:
           restore-keys: |
             msp430-gcc
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y p7zip-full srecord
 
       - name: Install MSP430-GCC
         if: steps.cache-msp430.outputs.cache-hit != 'true'
         run: |
-          sudo apt-get update
-          sudo apt-get install -y p7zip-full srecord
           # Download the .7z archive
           wget https://dr-download.ti.com/software-development/ide-configuration-compiler-or-debugger/MD-LlCjWuAbzH/9.3.1.2/msp430-gcc-full-linux-x64-installer-9.3.1.2.7z
           # Extract the installer
